tests/valid/integer_type_inference.ar
fn main() {
    let a: i8 = 1;
    let b: i8 = 127;
    let addition: i8 = a + b;
}
