tests/invalid/u16_literal_overflow.ar
fn main() {
    let a: u16 = 65536;
}
